--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <h4 style="margin-top: 10px;">জুই</h4>
       <hr>
       
-     <p> 
+     <p style="disply:none;"> 
       
 আশা করি ভাল আছো। হয়ত ভাবছো আমি কে, আমি সেই ছেলেটি যে তোমাকে এক নজর দেখার জন্য পথপ্রানে চেয়ে থাকি। কখন সেই পথে তুমি চল,আমি সেই ছেলেটি যে কিনা সেই পথে ফিরবে বলে তোমার অপেক্ষায় চেয়ে থাকি। আমি সেই ছেলেটি যে কিনা তোমার অজান্তেই চুপি চুপি তোমাকে দূর থেকে দেখি। রাস্তার কিনারাই তোমার পথ চেয়ে থাকা ছেলেটি সে যে নিজেই জানেনা কেনই বা পথপ্রানে চেয়ে থাকে। কেনই বা তোমার ফেরার অপেক্ষায় পথ চেয়ে থাকে।কেনই বা চুপি চুপি তোমাকে তোমার অজান্তেই দেখে। হয়ত তোমার সাথে নিমিষের দেখা,দুরের মৃধ হাসি,চুপিচুপি দেখা এক অন্য রকমের অনুভূতি যুগিয়েছে  যা কিনা দীর্ঘক্ষণ এর অনুভূতিকেও হার মানায় হয়ত বা এই অনুভুতি ছেলেটির মনে তোমাকে ভাললাগার অনুভূতি যুগিয়েছে  । আর মন?  মনত লাগামবিহীন ঘোড়ার মত, মুক্তভাবে ঘুরে বেড়ায়।সব কিছুই চেয়ে বসে কখনো মুক্ত আকাশে পাখির মত ঘুরে বেড়ায়।কখনোবা রাজার রাজ্য দখল করে ন্যায়।কখনো বা যেটা পাওয়ার যোগ্য না সেটাও চেয়ে বসে।হয়ত বা তেমনি নিজের অজানাতেই তোমাকে চেয়ে বসেছে। হয়ত বা এটা আমার জন্য স্বপ্ন বাস্তবটা অনেক কঠিন। তবুও কেন জানি মনে হচ্ছে আমার স্বপ্নের কথা স্বপ্নে দেখা মানুষ্টিকে জানিয়ে দেয়। 
 বাস্তবতা তোমার কাছে।
